# teletext_editor

./: Makefile  Makefile.in  README  configure  configure.ac  editor.cc  file_to_C.cc  pinkie.txt  rarity.txt  readfont.cc  render.cc  render.h  smile.txt  test.txt
resources/: 0000.xbm  0001.xbm  0002.xbm  0005.xbm  0007.xbm  0008.xbm  0009.xbm  0010.xbm  0011.xbm  0012.xbm  0013.xbm  0014.xbm  0015.xbm  0016.xbm  0017.xbm  0018.xbm  0019.xbm  0020.xbm  0021.xbm  0022.xbm  0023.xbm  0024.xbm  0025.xbm  0026.xbm  0027.xbm  0028.xbm  0029.xbm  0030.xbm  0031.xbm
